@@ -17,7 +17,7 @@ import static org.lwjgl.glfw.GLFW.*;
 public class Main {
 
     private Window window = new Window(800, 800, "Hello World");
-
+    boolean check = true;
     private ArrayList<Object> objects = new ArrayList<>();
     private ArrayList<Object> objectsRectangle = new ArrayList<>();
     private List<Vector3f> circle = new ArrayList<>();
@@ -47,56 +47,7 @@ public class Main {
         camera.setPosition(0f, 0f, 3f);
 
 
-        kumis.add(new Curve(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ), new ArrayList<>(),
-                new Vector4f(0f, 0f, 0f, 0.0f)
-        ));
-        kumis.get(0).addVertices(new Vector3f(-0.4f, -0.075f, 0.55f));
-        kumis.get(0).addVertices(new Vector3f(-0.3f, 0.1f, 0.55f));
-        kumis.get(0).addVertices(new Vector3f(-0.07f, -0.0225f, 0.55f));
-        kumis.get(0).translateObject(0f, 0f, 0.5f);
-
-        kumis.add(new Curve(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ), new ArrayList<>(),
-                new Vector4f(0f, 0f, 0f, 0.0f)
-        ));
-        kumis.get(1).addVertices(new Vector3f(-0.4f, -0.275f, 0f));
-        kumis.get(1).addVertices(new Vector3f(-0.3f, 0.05f, 0f));
-        kumis.get(1).addVertices(new Vector3f(-0.07f, -0.0425f, 0f));
-        kumis.get(1).translateObject(0f, 0f, 0.5f);
-
-        kumis.add(new Curve(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ), new ArrayList<>(),
-                new Vector4f(0f, 0f, 0f, 0.0f)
-        ));
-        kumis.get(2).addVertices(new Vector3f(0.4f, -0.075f, 0f));
-        kumis.get(2).addVertices(new Vector3f(0.3f, 0.1f, 0f));
-        kumis.get(2).addVertices(new Vector3f(0.07f, -0.0225f, 0f));
-        kumis.get(2).translateObject(0f, 0f, 0.5f);
-
-        kumis.add(new Curve(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ), new ArrayList<>(),
-                new Vector4f(0f, 0f, 0f, 0.0f)
-        ));
-        kumis.get(3).addVertices(new Vector3f(0.4f, -0.275f, 0f));
-        kumis.get(3).addVertices(new Vector3f(0.3f, 0.05f, 0f));
-        kumis.get(3).addVertices(new Vector3f(0.07f, -0.0425f, 0f));
-        kumis.get(3).translateObject(0f, 0f, 0.5f);
-
-
-        topi.add(new Sphere(Arrays.asList(
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -105,154 +56,178 @@ public class Main {
                         List.of(
                         )
                 ),
-                new Vector4f(1.0f, 0.65f, 0.0f, 0.0f),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.5f,
+                0.5f,
+                0.5f, 360,
+                180, 2));
+        kepala.get(0).translateObject(0f, 0f, 0f);
+        //white face
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.45f,
+                0.45f,
+                0.45f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().get(0).translateObject(0f, -0.05f, 0.1f);
+        kepala.get(0).getChildObject().get(0).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+
+        //outline mata
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.12f,
+                0.12f,
+                0.14f, 36,
+                18, 2));
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.12f,
+                0.12f,
+                0.14f, 36,
+                18, 2));
+        kepala.get(0).getChildObject().get(1).translateObject(-0.12f, 0.2f, 0.36f);
+        kepala.get(0).getChildObject().get(2).translateObject(0.12f, 0.21f, 0.36f);
+        kepala.get(0).getChildObject().get(1).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+        kepala.get(0).getChildObject().get(2).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+
+        //mata
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
                 Arrays.asList(0f, 0f, 0f),
                 0.1f,
+                0.1f,
+                0.12f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.1f,
+                0.12f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().get(3).translateObject(-0.12f, 0.2f, 0.4f);
+        kepala.get(0).getChildObject().get(4).translateObject(0.12f, 0.21f, 0.4f);
+        kepala.get(0).getChildObject().get(3).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+        kepala.get(0).getChildObject().get(4).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+
+        //pupil
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.02f,
+                0.02f,
+                0.02f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.02f,
+                0.02f,
+                0.02f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().get(5).translateObject(-0.08f, 0.2f, 0.52f);
+        kepala.get(0).getChildObject().get(6).translateObject(0.08f, 0.2f, 0.52f);
+        kepala.get(0).getChildObject().get(5).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+        kepala.get(0).getChildObject().get(6).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+
+        //nose
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.07f,
+                0.07f,
+                0.07f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().get(7).translateObject(0f, 0.05f, 0.55f);
+        kepala.get(0).getChildObject().get(7).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+
+        //mulut
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
                 0.15f,
+                0.05f,
                 0.15f, 360,
-                180, 6));
-        topi.get(0).rotateObject((float) Math.toRadians(60.0), 0f, 0f, -0.5f);
-        topi.get(0).translateObject(-0.4f, 0.35f, 0f);
-
-        //lengan
-        tangan.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.15f,
-                0.25f, 360,
-                180, 3));
-
-        tangan.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.15f,
-                0.25f, 360,
-                180, 3));
-        tangan.get(0).translateObject(-0.48f, -.5f, 0f);
-        tangan.get(1).translateObject(0.48f, -.5f, 0f);
-
-        //telapak tangan
-        tangan.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.11f,
-                0.11f,
-                0.11f, 360,
                 180, 2));
-        tangan.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.11f,
-                0.11f,
-                0.11f, 360,
-                180, 2));
-        tangan.get(2).translateObject(-0.49f, -.73f, 0f);
-        tangan.get(3).translateObject(0.49f, -.73f, 0f);
-
-        //paha
-        kaki.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.2f,
-                0.2f,
-                0.25f, 360,
-                180, 3));
-
-
-        kaki.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.2f,
-                0.2f,
-                0.25f, 360,
-                180, 3));
-        kaki.get(0).translateObject(-0.2f, -0.9f, 0f);
-        kaki.get(1).translateObject(0.2f, -0.9f, 0f);
-
-        //telapak kaki
-        kaki.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.2f,
-                0.2f,
-                0.1f, 360,
-                180, 3));
-        kaki.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.2f,
-                0.2f,
-                0.1f, 360,
-                180, 3));
-        kaki.get(2).translateObject(-0.21f, -1.2f, 0f);
-        kaki.get(3).translateObject(0.21f, -1.2f, 0f);
-
+        kepala.get(0).getChildObject().get(8).translateObject(0f, -0.13f, 0.43f);
+        kepala.get(0).getChildObject().get(8).setCenterPoint(Arrays.asList(0.25f, 0.0f, 0.0f));
+//        //head
 //        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
@@ -269,7 +244,7 @@ public class Main {
 //                0.5f, 360,
 //                180, 2));
 //        //white face
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -284,11 +259,10 @@ public class Main {
 //                0.45f,
 //                0.45f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().get(0).translateObject(0f, -0.05f, 0.1f);
-//        kepala.get(0).getChildObject().get(0).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
+//        kepala.get(1).translateObject(0f, -0.05f, 0.1f);
 //
 //        //outline mata
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -303,7 +277,7 @@ public class Main {
 //                0.12f,
 //                0.14f, 36,
 //                18, 2));
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -318,13 +292,11 @@ public class Main {
 //                0.12f,
 //                0.14f, 36,
 //                18, 2));
-//        kepala.get(0).getChildObject().get(1).translateObject(-0.12f, 0.2f, 0.36f);
-//        kepala.get(0).getChildObject().get(2).translateObject(0.12f, 0.21f, 0.36f);
-//        kepala.get(0).getChildObject().get(1).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
-//        kepala.get(0).getChildObject().get(2).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
+//        kepala.get(2).translateObject(-0.12f, 0.2f, 0.36f);
+//        kepala.get(3).translateObject(0.12f, 0.21f, 0.36f);
 //
 //        //mata
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -339,7 +311,7 @@ public class Main {
 //                0.1f,
 //                0.12f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -354,13 +326,11 @@ public class Main {
 //                0.1f,
 //                0.12f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().get(3).translateObject(-0.12f, 0.2f, 0.4f);
-//        kepala.get(0).getChildObject().get(4).translateObject(0.12f, 0.21f, 0.4f);
-//        kepala.get(0).getChildObject().get(3).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
-//        kepala.get(0).getChildObject().get(4).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
+//        kepala.get(4).translateObject(-0.12f, 0.2f, 0.4f);
+//        kepala.get(5).translateObject(0.12f, 0.21f, 0.4f);
 //
 //        //pupil
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -375,7 +345,7 @@ public class Main {
 //                0.02f,
 //                0.02f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -390,13 +360,11 @@ public class Main {
 //                0.02f,
 //                0.02f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().get(5).translateObject(-0.08f, 0.2f, 0.52f);
-//        kepala.get(0).getChildObject().get(6).translateObject(0.08f, 0.2f, 0.52f);
-//        kepala.get(0).getChildObject().get(5).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
-//        kepala.get(0).getChildObject().get(6).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
+//        kepala.get(6).translateObject(-0.08f, 0.2f, 0.52f);
+//        kepala.get(7).translateObject(0.08f, 0.2f, 0.52f);
 //
 //        //nose
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -411,11 +379,10 @@ public class Main {
 //                0.07f,
 //                0.07f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().get(7).translateObject(0f, 0.05f, 0.55f);
-//        kepala.get(0).getChildObject().get(7).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
+//        kepala.get(8).translateObject(0f, 0.05f, 0.55f);
 //
 //        //mulut
-//        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+//        kepala.add(new Sphere(Arrays.asList(
 //                new ShaderProgram.ShaderModuleData(
 //                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
 //                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -430,182 +397,10 @@ public class Main {
 //                0.05f,
 //                0.15f, 360,
 //                180, 2));
-//        kepala.get(0).getChildObject().get(8).translateObject(0f, -0.13f, 0.43f);
-//        kepala.get(0).getChildObject().get(8).setCenterPoint(Arrays.asList(0.25f,0.0f,0.0f));
-//        //head
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.5f,
-                0.5f,
-                0.5f, 360,
-                180, 2));
-        //white face
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.45f,
-                0.45f,
-                0.45f, 360,
-                180, 2));
-        kepala.get(1).translateObject(0f, -0.05f, 0.1f);
-
-        //outline mata
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.12f,
-                0.12f,
-                0.14f, 36,
-                18, 2));
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.12f,
-                0.12f,
-                0.14f, 36,
-                18, 2));
-        kepala.get(2).translateObject(-0.12f, 0.2f, 0.36f);
-        kepala.get(3).translateObject(0.12f, 0.21f, 0.36f);
-
-        //mata
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.1f,
-                0.12f, 360,
-                180, 2));
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.1f,
-                0.12f, 360,
-                180, 2));
-        kepala.get(4).translateObject(-0.12f, 0.2f, 0.4f);
-        kepala.get(5).translateObject(0.12f, 0.21f, 0.4f);
-
-        //pupil
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.02f,
-                0.02f,
-                0.02f, 360,
-                180, 2));
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.02f,
-                0.02f,
-                0.02f, 360,
-                180, 2));
-        kepala.get(6).translateObject(-0.08f, 0.2f, 0.52f);
-        kepala.get(7).translateObject(0.08f, 0.2f, 0.52f);
-
-        //nose
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.07f,
-                0.07f,
-                0.07f, 360,
-                180, 2));
-        kepala.get(8).translateObject(0f, 0.05f, 0.55f);
-
-        //mulut
-        kepala.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.15f,
-                0.05f,
-                0.15f, 360,
-                180, 2));
-        kepala.get(9).translateObject(0f, -0.13f, 0.43f);
+//        kepala.get(9).translateObject(0f, -0.13f, 0.43f);
 
         //badan
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -620,10 +415,10 @@ public class Main {
                 0.45f,
                 0.6f, 360,
                 180, 3));
-        badan.get(0).translateObject(0f, -0.4f, 0f);
+        kepala.get(0).getChildObject().get(9).translateObject(0f, -0.4f, 0f);
 
         //badan putih
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -639,11 +434,11 @@ public class Main {
                 0.4f, 360,
                 180, 2));
 
-        badan.get(1).translateObject(0f, -0.5f, 0.1f);
+        kepala.get(0).getChildObject().get(10).translateObject(0f, -0.5f, 0.1f);
 
         //outline kantong ajaib
 
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -658,11 +453,11 @@ public class Main {
                 0.35f,
                 0.35f, 360,
                 180, 9));
-        badan.get(2).translateObject(0f, 0.9f, -0.525f);
-        badan.get(2).rotateObject(180f, 0f, 0f, 0f);
+        kepala.get(0).getChildObject().get(11).translateObject(0f, 0.9f, -0.525f);
+        kepala.get(0).getChildObject().get(11).rotateObject(180f, 0f, 0f, 0f);
 
         //kantong ajaib
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -677,11 +472,11 @@ public class Main {
                 0.30f,
                 0.30f, 360,
                 180, 9));
-        badan.get(3).translateObject(0f, 0.9f, -0.60f);
-        badan.get(3).rotateObject(180f, 0f, 0f, 0f);
+        kepala.get(0).getChildObject().get(12).translateObject(0f, 0.9f, -0.60f);
+        kepala.get(0).getChildObject().get(12).rotateObject(180f, 0f, 0f, 0f);
 
         //kalung
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -696,10 +491,10 @@ public class Main {
                 0.3f,
                 0.1f, 360,
                 180, 3));
-        badan.get(4).translateObject(0f, -0.29f, 0.24f);
+        kepala.get(0).getChildObject().get(13).translateObject(0f, -0.29f, 0.24f);
 
         //lonceng
-        badan.add(new Sphere(Arrays.asList(
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -714,14 +509,258 @@ public class Main {
                 0.05f,
                 0.05f, 360,
                 180, 2));
-        badan.get(5).translateObject(0f, -0.33f, 0.55f);
+        kepala.get(0).getChildObject().get(14).translateObject(0f, -0.33f, 0.55f);
+
+
+        //lengan
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.15f,
+                0.25f, 360,
+                180, 3));
+
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.15f,
+                0.25f, 360,
+                180, 3));
+        kepala.get(0).getChildObject().get(15).translateObject(-0.48f, -.5f, 0f);
+        kepala.get(0).getChildObject().get(16).translateObject(0.48f, -.5f, 0f);
+
+        //telapak tangan
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.11f,
+                0.11f,
+                0.11f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.11f,
+                0.11f,
+                0.11f, 360,
+                180, 2));
+        kepala.get(0).getChildObject().get(17).translateObject(-0.49f, -.73f, 0f);
+        kepala.get(0).getChildObject().get(18).translateObject(0.49f, -.73f, 0f);
+
+        //paha
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.2f,
+                0.25f, 360,
+                180, 3));
+
+
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.2f,
+                0.25f, 360,
+                180, 3));
+        kepala.get(0).getChildObject().get(19).translateObject(-0.2f, -0.9f, 0f);
+        kepala.get(0).getChildObject().get(20).translateObject(0.2f, -0.9f, 0f);
+
+        //telapak kaki
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.2f,
+                0.1f, 360,
+                180, 3));
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.2f,
+                0.1f, 360,
+                180, 3));
+        kepala.get(0).getChildObject().get(21).translateObject(-0.21f, -1.2f, 0f);
+        kepala.get(0).getChildObject().get(22).translateObject(0.21f, -1.2f, 0f);
+
+
+        //kumis
+        kepala.get(0).getChildObject().add(new Curve(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ), new ArrayList<>(),
+                new Vector4f(0f, 0f, 0f, 0.0f)
+                , Arrays.asList(0f, 0f, 0f)));
+        kepala.get(0).getChildObject().get(23).addVertices(new Vector3f(-0.4f, -0.075f, 0.55f));
+        kepala.get(0).getChildObject().get(23).addVertices(new Vector3f(-0.3f, 0.1f, 0.55f));
+        kepala.get(0).getChildObject().get(23).addVertices(new Vector3f(-0.07f, -0.0225f, 0.55f));
+        kepala.get(0).getChildObject().get(23).translateObject(0f, 0f, 0.5f);
+
+        kepala.get(0).getChildObject().add(new Curve(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ), new ArrayList<>(),
+                new Vector4f(0f, 0f, 0f, 0.0f)
+                , Arrays.asList(0f, 0f, 0f)));
+        kepala.get(0).getChildObject().get(24).addVertices(new Vector3f(-0.4f, -0.275f, 0f));
+        kepala.get(0).getChildObject().get(24).addVertices(new Vector3f(-0.3f, 0.05f, 0f));
+        kepala.get(0).getChildObject().get(24).addVertices(new Vector3f(-0.07f, -0.0425f, 0f));
+        kepala.get(0).getChildObject().get(24).translateObject(0f, 0f, 0.5f);
+
+        kepala.get(0).getChildObject().add(new Curve(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ), new ArrayList<>(),
+                new Vector4f(0f, 0f, 0f, 0.0f)
+                , Arrays.asList(0f, 0f, 0f)));
+        kepala.get(0).getChildObject().get(25).addVertices(new Vector3f(0.4f, -0.075f, 0f));
+        kepala.get(0).getChildObject().get(25).addVertices(new Vector3f(0.3f, 0.1f, 0f));
+        kepala.get(0).getChildObject().get(25).addVertices(new Vector3f(0.07f, -0.0225f, 0f));
+        kepala.get(0).getChildObject().get(25).translateObject(0f, 0f, 0.5f);
+
+        kepala.get(0).getChildObject().add(new Curve(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ), new ArrayList<>(),
+                new Vector4f(0f, 0f, 0f, 0.0f)
+                , Arrays.asList(0f, 0f, 0f)));
+        kepala.get(0).getChildObject().get(26).addVertices(new Vector3f(0.4f, -0.275f, 0f));
+        kepala.get(0).getChildObject().get(26).addVertices(new Vector3f(0.3f, 0.05f, 0f));
+        kepala.get(0).getChildObject().get(26).addVertices(new Vector3f(0.07f, -0.0425f, 0f));
+        kepala.get(0).getChildObject().get(26).translateObject(0f, 0f, 0.5f);
+
+        //topi
+        kepala.get(0).getChildObject().add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.65f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.15f,
+                0.15f, 360,
+                180, 6));
+        kepala.get(0).getChildObject().get(27).rotateObject((float) Math.toRadians(60.0), 0f, 0f, -0.5f);
+        kepala.get(0).getChildObject().get(27).translateObject(-0.4f, 0.35f, 0f);
+
+
     }
 
+
     public void input() {
+        if (window.isKeyPressed(GLFW_KEY_Z)) {
+            for (Sphere kepala : kepala) {
+                List<Float> temp = new ArrayList<>(kepala.getCenterPoint());
+                kepala.getChildObject().get(15).translateObject(-temp.get(0), -temp.get(1), -temp.get(2));
+                kepala.getChildObject().get(17).translateObject(-temp.get(0), -temp.get(1), -temp.get(2));
+                if (check) {
+                    if (kepala.getChildObject().get(15).getCenterPoint().get(1) >= -0.46f) {
+                        check = false;
+                    } else {
+
+                        kepala.getChildObject().get(15).rotateObject((float) Math.toRadians(0.5f), -1f, 0f, 0f);
+                        kepala.getChildObject().get(17).rotateObject((float) Math.toRadians(0.5f), -1f, 0f, 0f);
+
+                        System.out.println(kepala.getChildObject().get(15).getCenterPoint());
+                    }
+                } else {
+                    if (kepala.getChildObject().get(15).getCenterPoint().get(1) <= -0.49f) {
+                        check = true;
+                    } else {
+                        kepala.getChildObject().get(15).rotateObject((float) Math.toRadians(0.5f), 1f, 0f, 0f);
+                        kepala.getChildObject().get(17).rotateObject((float) Math.toRadians(0.5f), 1f, 0f, 0f);
+                        System.out.println(kepala.getChildObject().get(15).getCenterPoint());
+                    }
+                }
+                kepala.getChildObject().get(15).translateObject(-temp.get(0), -temp.get(1), -temp.get(2));
+                kepala.getChildObject().get(17).translateObject(-temp.get(0), -temp.get(1), -temp.get(2));
+            }
+        }
         if (window.isKeyPressed(GLFW_KEY_W)) {
+
             for (Sphere kepala : kepala
             ) {
+                List<Float> temp = new ArrayList<>(kepala.getCenterPoint());
+                kepala.translateObject(-temp.get(0), -temp.get(1), -temp.get(2));
                 kepala.rotateObject((float) Math.toRadians(0.5f), 0f, 1f, 0f);
+                kepala.translateObject(temp.get(0), temp.get(1), temp.get(2));
             }
             for (Sphere topi : topi
             ) {
@@ -742,6 +781,9 @@ public class Main {
             ) {
                 kumis.rotateObject((float) Math.toRadians(0.5f), 0f, 1f, 0f);
             }
+        }
+        if (window.isKeyPressed(GLFW_KEY_E)) {
+            camera.moveBackwards(0.1f);
         }
         if (window.isKeyPressed(GLFW_KEY_S)) {
             camera.moveForward(0.1f);
@@ -802,36 +844,36 @@ public class Main {
     public void loop() {
         while (window.isOpen()) {
             window.update();
-            glClearColor(0.0f, 0.0f, 0.0f, 0.0f);
+            glClearColor(0.0f, 1.0f, 0.0f, 0.0f);
             GL.createCapabilities();
 
             input();
 
 //            code
-            for (Sphere kaki : kaki
-            ) {
-                kaki.draw(camera, projection);
-            }
-            for (Sphere badan : badan
-            ) {
-                badan.draw(camera, projection);
-            }
-            for (Sphere tangan : tangan
-            ) {
-                tangan.draw(camera, projection);
-            }
+//            for (Sphere kaki : kaki
+//            ) {
+//                kaki.draw(camera, projection);
+//            }
+//            for (Sphere badan : badan
+//            ) {
+//                badan.draw(camera, projection);
+//            }
+//            for (Sphere tangan : tangan
+//            ) {
+//                tangan.draw(camera, projection);
+//            }
 
             for (Sphere kepala : kepala
             ) {
                 kepala.draw(camera, projection);
             }
-            for (Object kumis : kumis) {
-                kumis.drawLine(camera, projection);
-            }
-            for (Sphere topi : topi
-            ) {
-                topi.draw(camera, projection);
-            }
+//            for (Object kumis : kumis) {
+//                kumis.drawLine(camera, projection);
+//            }
+//            for (Sphere topi : topi
+//            ) {
+//                topi.draw(camera, projection);
+//            }
             //Restore state
             glDisableVertexAttribArray(0);
 
